--- a/angular.json
+++ b/angular.json
@@ -23,11 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.scss"
             ],
             "scripts": [
-                "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+              "node_modules/jquery/src/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ],
             "es5BrowserSupport": true
           },
@@ -135,5 +136,10 @@
       }
     }
   },
-  "defaultProject": "sistema-gestion-frontend-angular"
+  "defaultProject": "sistema-gestion-frontend-angular",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
