--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+                "node_modules/bootstrap/dist/css/bootstrap.css",
+                "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/jquery/src/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ],
             "es5BrowserSupport": true
           },
